added basic drawing

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~39.0.2",
     "expo-asset": "~8.2.0",
     "expo-constants": "~9.2.0",
+    "expo-draw": "git+https://github.com/MarangoniEduardo/expo-draw",
     "expo-font": "~8.3.0",
     "expo-linking": "^1.0.1",
     "expo-splash-screen": "~0.6.2",
@@ -32,6 +33,7 @@
     "react-native-gesture-handler": "~1.7.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-svg": "12.1.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
