--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "expo-constants": "~9.2.0",
     "expo-draw": "git+https://github.com/MarangoniEduardo/expo-draw",
     "expo-font": "~8.3.0",
+    "expo-gl": "~9.1.1",
     "expo-linking": "^1.0.1",
+    "expo-pixi": "^1.2.0",
     "expo-splash-screen": "~0.6.2",
     "expo-status-bar": "~1.0.2",
     "expo-web-browser": "~8.5.0",
+    "pixi.js": "^6.1.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-button": "^3.0.1",
+    "react-native-color-picker": "^0.6.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
