--- a/package.json
+++ b/package.json
@@ -12,40 +12,40 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.0",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.8.0",
-    "@react-navigation/native": "^5.7.3",
-    "@react-navigation/stack": "^5.9.0",
-    "expo": "~39.0.2",
-    "expo-asset": "~8.2.0",
-    "expo-constants": "~9.2.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-masked-view/masked-view": "0.2.7",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.1",
+    "expo": "^46.0.0",
+    "expo-asset": "~8.6.1",
+    "expo-constants": "~13.2.4",
     "expo-draw": "git+https://github.com/MarangoniEduardo/expo-draw",
-    "expo-font": "~8.3.0",
-    "expo-gl": "~9.1.1",
-    "expo-linking": "^1.0.1",
-    "expo-pixi": "^1.2.0",
-    "expo-splash-screen": "~0.6.2",
-    "expo-status-bar": "~1.0.2",
-    "expo-web-browser": "~8.5.0",
-    "pixi.js": "^6.1.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-button": "^3.0.1",
+    "expo-font": "~10.2.0",
+    "expo-gl": "~11.4.0",
+    "expo-linking": "~3.2.2",
+    "expo-pixi": "^2.1.1",
+    "expo-splash-screen": "~0.16.2",
+    "expo-status-bar": "~1.4.0",
+    "expo-web-browser": "~11.0.0",
+    "pixi.js": "^6.5.5",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
     "react-native-color-picker": "^0.6.0",
-    "react-native-gesture-handler": "~1.7.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
-    "react-native-svg": "12.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "jest-expo": "~39.0.0",
-    "typescript": "~3.9.5"
+    "@babel/core": "^7.18.6",
+    "@babel/plugin-proposal-unicode-property-regex": "^7.18.6",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
+    "jest-expo": "^46.0.0",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
