--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-web-browser": "~11.0.0",
+    "native-base": "^3.4.17",
     "pixi.js": "^6.5.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
