Added firebase config with Google auth0 signin

--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.1",
     "expo": "^46.0.0",
+    "expo-application": "^4.2.2",
     "expo-asset": "~8.6.1",
+    "expo-auth-session": "~3.7.1",
     "expo-constants": "~13.2.4",
     "expo-draw": "git+https://github.com/MarangoniEduardo/expo-draw",
     "expo-font": "~10.2.0",
     "expo-gl": "~11.4.0",
     "expo-linking": "~3.2.2",
     "expo-pixi": "^2.1.1",
+    "expo-random": "~12.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-web-browser": "~11.0.0",
+    "firebase": "9.6.11",
     "native-base": "^3.4.17",
     "pixi.js": "^6.5.5",
     "react": "18.0.0",
