More firebase, load chats, create user on auth

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-gl": "~11.4.0",
     "expo-linking": "~3.2.2",
     "expo-pixi": "^2.1.1",
+    "expo-pixi-revived": "^1.2.0",
     "expo-random": "~12.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
@@ -36,6 +37,7 @@
     "pixi.js": "^6.5.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-native": "0.69.6",
     "react-native-color-picker": "^0.6.0",
     "react-native-gesture-handler": "~2.5.0",
